# bevy_roguelike_prototype

./: Cargo.toml  LICENSE  README.md
assets/textures/: battle-mock.ase  cave_sprite.aseprite  spider_sprite.ase  spider_sprite.png~
assets/weapon_bases/: weapon_base_template.ron
examples/: basic_ai.rs  equipment.rs  ui.rs  visual_ai.rs
src/: main.rs
src/game/: animation.rs  game_state.rs  loading.rs  mod.rs  timing.rs
src/game/camera/: input.rs  mod.rs  ortho.rs
src/game/gameplay/: mod.rs
src/game/gameplay/attributes/: attribute.rs  health.rs  mod.rs
src/game/gameplay/battle/: mod.rs
src/game/gameplay/camera/: mod.rs  movement.rs
src/game/gameplay/character/: character.rs  collision.rs  mod.rs  movement.rs
src/game/gameplay/enemy/: mod.rs  spawner.rs
src/game/gameplay/equipment/: mod.rs
src/game/gameplay/modifiers/: curse.rs  mod.rs  modifier.rs  poison.rs
src/game/gameplay/player/: collision.rs  mod.rs  movement.rs  player.rs
src/game/gameplay/scenes/: battle.rs  map_view.rs  mod.rs
src/game/gameplay/stats/: health.rs  mod.rs  stat.rs
src/game/helpers/: mod.rs  run_system.rs  z_index.rs
src/game/map/: generate_map.rs  get_has_map_assets.rs  map.rs  mod.rs  spawn_map_entity.rs
src/game/player/: mod.rs  movement.rs  player.rs
src/map/: generate_map.rs  mod.rs  spawn_map_entity.rs
