[package]
name = "rogue-like-prototype"
version = "0.1.0"
authors = ["John"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
bevy_egui = "0.4"
bevy_ecs_tilemap = { path="../bevy_ecs_tilemap" } #{ git="https://github.com/StarArawn/bevy_ecs_tilemap", rev="13adc2e4405115a8243249cdae38d796cc70149b" }
big-brain = "0.5"
noise = "0.7"
pathfinding = "2.1"
fastrand = "1.3.4"