[package]
name = "rogue-like-prototype"
version = "0.1.0"
authors = ["John"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
bevy_egui = "0.4"
bevy_ecs_tilemap = { git="https://github.com/StarArawn/bevy_ecs_tilemap", rev="d3b6e3a1a3fab08a417374c826fa8537a896cdf5" }
big-brain = "0.5"
noise = "0.7"
pathfinding = "2.1"
fastrand = "1.3"
ron = "0.6"
serde = "1.0"